<resources>
    <string name="app_name">Your Bookshelf</string>
    <string name="splash_text">Dive into a universe of stories with Bookshelf</string>
    <string name="sort_by">Sort by:</string>
    <string name="title_of_manga">Title of Manga</string>
    <string name="favs">Favs</string>
    <string name="hits">Hits</string>
    <string name="title">Title</string>
    <string name="ascending_order">Ascending Order -</string>
    <string name="hits_4564">Hits : 4564</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="books_are_life">Books Are Life</string>
    <string name="enter_email_id">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
</resources>