<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/launch_screen_root">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/launch_screen_img" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_black_gradient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/black_dradient" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:gravity="center"
        android:elegantTextHeight="true"
        android:text="@string/books_are_life"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/transparent"
        android:background="@drawable/cardview_shape"
        app:layout_constraintBottom_toBottomOf="@+id/img_black_gradient"
        app:layout_constraintTop_toBottomOf="@+id/txt_quote">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_shape"
            android:orientation="vertical">




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/YellowMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40dp"
                android:text="@string/login"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/WhiteMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_now" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>