<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#03F4D0"
    app:cardElevation="3dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="@dimen/_10dp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_20dp"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_book"
            android:layout_width="@dimen/_100dp"
            android:scaleType="fitXY"
            android:layout_height="@dimen/_100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_book_name"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            app:layout_constraintEnd_toStartOf="@+id/img_fav"
            app:layout_constraintStart_toEndOf="@id/img_book"
            app:layout_constraintTop_toTopOf="@id/img_book"
            tools:text="@string/title_of_manga" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_hits"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:textColor="@color/black"
            app:fontFamily="monospace"
            app:layout_constraintStart_toEndOf="@id/img_book"
            app:layout_constraintTop_toBottomOf="@+id/txt_book_name"
            tools:text="@string/hits_4564" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_fav"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_star_rate_24" />

        <TextView
            android:id="@+id/txt_alias_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="casual"
            android:text="Alias -"
            android:textStyle="bold"

            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_book" />


        <TextView
            android:id="@+id/txt_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:textSize="16sp"

            android:fontFamily="casual"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_alias_txt" />


        <TextView
            android:id="@+id/txt_last_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Last Updated -"
            android:textStyle="bold"

            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="casual"

            app:layout_constraintTop_toBottomOf="@id/txt_alias"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_last_updated"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_summmary_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Summary -"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="casual"

            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/txt_updated"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/txt_summmary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="16sp"

            android:text="@string/lorem_ipsum"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_summmary_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>